# music_symbolic_features

./: .gitignore  .gitmodules  .ignore  EWLD-jsymbolic-mid.csv  EWLD-music21-mid-no-pc.csv  EWLD-music21-mid.csv  EWLD-music21-xml.csv  EWLD-music21_native-jsymbolic-mid-no-pc.csv  EWLD-music21_native-mid-no-pc.csv  EWLD-music21_native-mid.csv  EWLD-music21_native-xml-no-pc.csv  EWLD-music21_native-xml.csv  EWLD-musif-mid.csv  EWLD-musif-xml-no-pc.csv  EWLD-musif_native-jsymbolic-mid-no-pc.csv  EWLD-musif_native-mid-no-pc.csv  EWLD-musif_native-mid.csv  EWLD-musif_native-music21_native-xml-no-pc.csv  EWLD-musif_native-music21_native-xml.csv  JLR-music21-mid-no-pc.csv  JLR-music21-xml-no-pc.csv  JLR-music21-xml.csv  JLR-music21_native-mid-no-pc.csv  JLR-music21_native-mid.csv  JLR-music21_native-xml-no-pc.csv  JLR-musif-xml-no-pc.csv  JLR-musif-xml.csv  JLR-musif_native-jsymbolic-mid.csv  JLR-musif_native-mid-no-pc.csv  JLR-musif_native-mid.csv  JLR-musif_native-music21_native-jsymbolic-mid-no-pc.csv  JLR-musif_native-music21_native-jsymbolic-mid.csv  JLR-musif_native-music21_native-mid-no-pc.csv  JLR-musif_native-music21_native-mid.csv  JLR-musif_native-music21_native-xml.csv  JLR-musif_native-xml-no-pc.csv  JLR-musif_native-xml.csv  LICENSE  Readme.md  asap-performance-music21_native-jsymbolic-mid.csv  (+63 more)
features/EWLD/: jsymbolic_def
features/asap-dataset/: jsymbolic-mid.arff  jsymbolic.csv  music21-xml.csv  musif-xml.csv
features/didone/: jsymbolic-mid.arff  jsymbolic.csv
features/mass-duos-corpus-josquin-larue/: jsymbolic-mid.arff  jsymbolic-mid.csv  music21-krn.csv  music21-mid.csv  music21-xml.csv  musif-krn.csv  musif-mid.csv  musif-xml.csv
features/quartets/: jsymbolic-mid.arff  jsymbolic-mid.csv  music21-krn.csv  music21-mid.csv  musif-krn.csv
output/automl_output/over_time/: EWLD-jsymbolic-mid-no-pc.csv  EWLD-music21-xml-no-pc.csv  EWLD-music21_native-jsymbolic-mid.csv  EWLD-musif-mid-no-pc.csv  EWLD-musif-xml.csv  EWLD-musif_native-jsymbolic-mid.csv  EWLD-musif_native-music21_native-jsymbolic-mid-no-pc.csv  EWLD-musif_native-music21_native-jsymbolic-mid.csv  EWLD-musif_native-music21_native-mid-no-pc.csv  EWLD-musif_native-music21_native-mid.csv  EWLD-musif_native-xml-no-pc.csv  EWLD-musif_native-xml.csv  JLR-jsymbolic-mid-no-pc.csv  JLR-jsymbolic-mid.csv  JLR-music21-mid.csv  JLR-music21_native-jsymbolic-mid-no-pc.csv  JLR-music21_native-jsymbolic-mid.csv  JLR-music21_native-xml.csv  JLR-musif-mid-no-pc.csv  JLR-musif-mid.csv  JLR-musif_native-jsymbolic-mid-no-pc.csv  JLR-musif_native-music21_native-xml-no-pc.csv  asap-performance-jsymbolic-mid-no-pc.csv  asap-performance-jsymbolic-mid.csv  asap-performance-music21-mid-no-pc.csv  asap-performance-music21-mid.csv  asap-performance-music21_native-jsymbolic-mid-no-pc.csv  asap-performance-music21_native-mid.csv  asap-performance-musif_native-jsymbolic-mid-no-pc.csv  asap-performance-musif_native-mid-no-pc.csv  asap-performance-musif_native-mid.csv  asap-performance-musif_native-music21_native-jsymbolic-mid.csv  asap-scores-jsymbolic-mid-no-pc.csv  asap-scores-jsymbolic-mid.csv  asap-scores-music21-mid-no-pc.csv  asap-scores-music21-mid.csv  asap-scores-music21-xml-no-pc.csv  asap-scores-music21-xml.csv  asap-scores-music21_native-jsymbolic-mid-no-pc.csv  asap-scores-music21_native-xml-no-pc.csv  (+41 more)
symbolic_features/: data.py  effectiveness.py  features.py  music21.py  musif.py  preprocess.py  settings.py  utils.py
