[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Federico Simonetta", email = "fsimonetta@iccmu.es"},
]
requires-python = ">=3.9, <3.10"
license = {text = "MIT"}
dependencies = [
    "auto-sklearn==0.15.0",
    "scikit-learn==0.24.2",
    "numpy==1.22.3",
    "scipy==1.7.3",
    "pandas==1.5.3",
    "plotly==5.13.0",
    "graphviz==0.20.1",
    "statsmodels==0.13.5",
    "tqdm==4.64.1",
    "loguru>=0.6.0",
    "fire>=0.4.0",
    "notifiers>=1.3.3",
]
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.scripts]
musicxml2midi = "python -m symbolic_features.features musicxml2midi"
extract = "python -m symbolic_features.features extract" 
install_pip = "python -m ensurepip"
updated_pip = "python -m pip install -U pip"
install_deps = "python -m pip install kaleido==0.2.1 musif==1.0.1 --ignore-requires-python"
post_install = {composite = ["install_pip", "updated_pip", "install_deps"]}

[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.11",
    "ipython>=8.10.0",
]
[[tool.pdm.source]]
url = "https://pypi.anaconda.org/intel/simple"
verify_ssl = true
name = "intel"

[[tool.pdm.source]]
url = "https://pypi.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.resolution]
respect-source-order = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
